fix deps and code styling on dark mode

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -152,11 +152,11 @@ h1 {
 }
 
 .sl-markdown-content p code {
-  @apply px-[.4em] py-[.2em] text-sm rounded border-kinde-grey-100 border-[1px];
+  @apply px-[.4em] py-[.2em] text-sm rounded border-kinde-grey-100 dark:border-kinde-grey-700 dark:bg-kinde-grey-800 border-[1px];
 }
 
 .sl-markdown-content blockquote code {
-  @apply bg-kinde-grey-100 border-kinde-grey-200;
+  @apply bg-kinde-grey-100 border-kinde-grey-200 dark:bg-kinde-grey-800 dark:border-kinde-grey-700;
 }
 
 .template-doc .sl-markdown-content a {
